--- a/web/index.css
+++ b/web/index.css
@@ -65,6 +65,10 @@ td:nth-child(1){
 td:nth-child(2){
     width: 55%;
 }
+td li a {
+    text-decoration: none;
+    color: #493f33;
+}
 ul {
     list-style: none;
     padding: 0px;
