--- a/web/shop/shop.css
+++ b/web/shop/shop.css
@@ -334,6 +334,11 @@ div.form-btns a {
 div.form-btns a:hover {
     color: #635143;
 }
+.checkout-header {
+    margin-block-start: 40px;
+    margin-block-end: 0px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
 /*--------- CONFIRMATION ----------*/
 .confirmation {
     padding: 0px 20px;
