--- a/web/shop/shop.css
+++ b/web/shop/shop.css
@@ -218,6 +218,10 @@ footer {
     border: 1px solid #474747;
     color: #474747;
 }
+.info-display .items-left {
+    font-size: 0.8em;
+    color: rgb(202, 120, 120);
+}
 /*--------- VIEW ORDER ----------*/
 .view-order-container {
     width: 60%;
