--- a/web/shop/shop.css
+++ b/web/shop/shop.css
@@ -48,14 +48,18 @@ main {
     border: 1px solid #585754;
     border-radius: 5px;
 }
-/*------------------*/
+/*----------- NAV ----------*/
 .nav {
     list-style: none;
-    display: flex;
     padding: 0px 50px 0px 50px;
 }
 .nav li {
     margin: 10px;
+    display: block;
+    text-align: center;
+}
+.nav li:last-child {
+    display: none;
 }
 .nav li a {
     text-decoration: none;
@@ -82,6 +86,7 @@ main {
     font-family: 'Open Sans', sans-serif;
     border-radius: 50%;
 }
+/*----------------------------*/
 .spread {
     width: 100%;
     background-image: url("images/homepage.JPG");
@@ -450,6 +455,17 @@ div.form-btns a:hover {
         background-size: 100%;
         color: #36332c;
     }
+    /*----------- NAV ----------*/
+    .nav {
+        display: flex;
+    }
+    .nav li {
+        text-align: center;
+    }
+    .nav li:last-child {
+        display: block;
+    }
+    /*----------------------------*/
     .spread {
         padding: 20px 0;
         height: 600px;
