--- a/web/shop/shop.css
+++ b/web/shop/shop.css
@@ -247,7 +247,7 @@ p.items-left {
     font-weight: bolder;
 }
 .view-order-container form input {
-    width: 35%;
+    width: 50%;
     border-radius: 5px;
     padding: 10px 10px;
     border: 1px solid #9ea1a1;
@@ -261,7 +261,7 @@ p.items-left {
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    width: 20%;
+    width: 35%;
     text-align: center;
 }
 .view-order-container input[type="submit"]:hover {
@@ -548,7 +548,15 @@ div.form-btns a:hover {
     }
     #checkout-btn:hover {
         background-color: #775b46;
-    }/*-------- CHECKOUT -----------*/
+    }
+    /* ------- VIEW ORDER --------*/
+    .view-order-container form input {
+        width: 35%;
+    }
+    .view-order-container input[type="submit"] {
+        width: 20%;
+    }
+    /*-------- CHECKOUT -----------*/
     .checkout {
         width: 60%;
         padding: 40px;
