--- a/web/shop/shop.css
+++ b/web/shop/shop.css
@@ -186,6 +186,7 @@ footer {
     color: #7e7e7e;
     text-align: center;
     padding-top: 20px;
+    font-size: 1.3em;
 }
 /*------- FILTER --------*/
 .categories {
